--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
-
+.all{
+    width: 100%;
+    height: 100%;
+}
+.round{
+    border-radius: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+body{
+    margin: 0;
+}
+.user-name{
+    text-align: center;
+    font-size: 50px;
+}
